# Plane-board

./: CMakeLists.txt  README.md  iio_data.cpp  iio_data.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
resources/: resources.qrc
